# subnet-2

./: .flake8  Dockerfile  README.md  cspell.json  pyproject.toml  setup.sh
.github/workflows/: security.yml  sync-upstream.yml
neurons/: __init__.py  cli_parser.py  constants.py  incentive_mechanism.ipynb  miner.py  protocol.py  validator.py
neurons/_miner/: circuit_manager.py  miner_session.py  server.py
neurons/_validator/: config.py
neurons/_validator/api/: __init__.py  cache.py  client.py  inference.proto  inference_pb2.py
neurons/_validator/config/: __init__.py  api.py
neurons/_validator/core/: capacity_manager.py  prometheus.py  request.py  request_pipeline.py  response_processor.py  validator_loop.py
neurons/_validator/models/: base_rpc_request.py  dslice_request.py  miner_response.py  poc_rpc_request.py  request_type.py
neurons/_validator/pow/: proof_of_weights_handler.py
neurons/_validator/scoring/: pow_manager.py  score_manager.py  weights.py
neurons/_validator/utils/: hash_guard.py  logging.py  uid.py
neurons/deployment_layer/: circuit_store.py
neurons/deployment_layer/model_b4a373270b59e2b9d5aac05e41df8cdff76a252f5543e00fcd87f2626b37360c/: input.py  metadata.json
neurons/deployment_layer/model_b4a373270b59e2b9d5aac05e41df8cdff76a252f5543e00fcd87f2626b37361c/: input.py
neurons/execution_layer/: circuit.py  dsperse_event_client.py  dsperse_manager.py  generic_input.py  incremental_runner.py  input_registry.py  proof_uploader.py
neurons/scripts/: check_miner.py  get_validators.py  plot_model_stats.py  sign_api_request.py  verify_ssl.py
neurons/utils/: __init__.py  auto_update.py  gc_logging.py  memory_profiler.py  pre_flight.py  system.py
